# Krishisahayak-2.0

./: .gitignore  .pre-commit-config.yaml  API_README.md  CHANGELOG.md  Dockerfile  Dockerfile.api  LICENSE  MANIFEST.in  Makefile  README.md  ROADMAP.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: check_docs.yml
configs/: label_map.yaml  master_config.yaml  model_config.yaml  robustness_plan.json
configs/augmentations/: plantdoc_augmentations.yaml
docs/: API_README.md  ARCHITECTURE.md  CHALLENGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA.md  DEPLOYMENT.md  KNOWLEDGE_DISTILLATION.md  LIMITATIONS.md  MODEL_CARD.md  QUICKSTART.md  RENAME_JUSTIFICATION.md  ROADMAP.md  explainability.md  hybrid_dataset_training.md  hybrid_model_guide.md  hybrid_training.md  journey.md
examples/: gradcam_demo.py  hybrid_dataset_example.py
scripts/: __init__.py  analyze_dataset.py  analyze_plantdoc.py  annotate.py  calculate_class_weights.py  doc_ref_checker.py  eda_hybrid_dataset.py  merge_datasets.py  run_inference.py  validate_dataset.py  verify_augmentations.py
src/: __init__.py
src/krishi_sahayak/: __init__.py
src/krishi_sahayak/api/: __init__.py  config.py  main.py  schemas.py
src/krishi_sahayak/config/: __init__.py  config.yaml  loader.py  schemas.py
src/krishi_sahayak/inference/: data_loader.py  handler.py  model_loader.py  predictor.py
src/krishi_sahayak/launchers/: training_launcher.py
src/krishi_sahayak/models/: __init__.py  schemas.py
src/krishi_sahayak/models/base/: __init__.py  base.py
src/krishi_sahayak/models/core/: __init__.py  hybrid_model.py  unified_model.py
src/krishi_sahayak/models/gan/: __init__.py  gan.py  pix2pix.py
src/krishi_sahayak/models/utils/: __init__.py  confidence.py  distillation.py  fusion_validator.py
src/krishi_sahayak/pipelines/: job_manager.py  runners.py  schemas.py
src/krishi_sahayak/utils/: __init__.py  data_utils.py  explainability.py  hardware.py  logger.py  seed.py  visualization.py
tests/: conftest.py  test_predictor.py  test_training_launcher.py
tests/api/: test_api.py
tests/inference/: test_data_loader.py  test_model_loader.py
tests/integration/: __init__.py  test_gradcam_integration.py
tests/smoke/: test_public_api_imports.py
tests/unit/: __init__.py  test_explainability.py
tests/unit/config/: __init__.py  test_loader.py
tests/unit/models/: __init__.py  test_confidence.py  test_gan_models.py  test_pix2pix_module.py
tests/unit/models/base/: test_base.py
tests/unit/models/core/: test_hybrid_model.py  test_unified_model.py
tests/unit/models/gan/: test_pix2pix_module.py
tests/unit/models/utils/: test_confidence.py  test_distillation.py  test_fusion_validator.py
tests/unit/test_data/: __init__.py
tests/unit/test_models/: __init__.py
tests/unit/test_utils/: __init__.py
tests/unit/utils/: __init__.py  test_hardware.py  test_logger.py  test_seed.py
tests/utils/: test_visualization.py
validation_results/: validation_report.json
