[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krishi-sahayak"
dynamic = ["version"]
authors = [ {name = "Vikas Sahani", email = "vikassahani17@gmail.com"} ]
description = "AI-Powered Crop Health Assistant for farmers."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0", "torchvision>=0.15.0", "pytorch-lightning>=2.0.0",
    "timm>=0.6.0", "numpy>=1.22.0", "pandas>=1.3.0", "scikit-learn>=1.0.0",
    "Pillow>=9.0.0", "opencv-python-headless>=4.5.0", "PyYAML>=5.4.1", "tqdm>=4.60.0",
    "torchcam>=0.3.1", "captum>=0.7.0", "lime>=0.2.0.1",
    "pydantic>=2.0.0", "matplotlib>=3.5.0", "seaborn>=0.11.0", "gradio>=3.0.0",
    "colorlog>=6.0.0", "structlog>=24.0.0", "wandb>=0.15.0", "tensorboard>=2.12.0",
    "albumentations>=1.4.0",
]

[project.urls]
"Homepage" = "https://github.com/VIKAS9793/Krishisahayak-2.0"
"Repository" = "https://github.com/VIKAS9793/Krishisahayak-2.0"
"Bug Tracker" = "https://github.com/VIKAS9793/Krishisahayak-2.0/issues"

[project.scripts]
krishi-train = "krishi_sahayak.launchers.training_launcher:main"
krishi-infer = "krishi_sahayak.launchers.run_inference:main"
krishi-analyze = "krishi_sahayak.launchers.analyze_dataset:main"

[project.optional-dependencies]
dev = [
    "black>=24.0", "ruff>=0.4", "mypy>=1.9", "pre-commit", "pip-tools", "pip-audit>=2.7.0",
    "dvc[s3]>=3.0",
]
test = [
    "pytest>=7.4", "pytest-mock>=3.10.0", "pytest-cov>=3.0.0",
    "adversarial-robustness-toolbox>=1.17.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.0",
]
api = [
    "fastapi>=0.110.0", "uvicorn[standard]>=0.29.0", "gunicorn>=22.0.0",
    "python-multipart>=0.0.9", "pydantic-settings>=2.2.0",
]
deploy = [ "onnx>=1.16", "onnxruntime>=1.18", "tensorflow>=2.16", "onnx-tf>=1.10" ]
docs = [ "mkdocs>=1.6.0", "mkdocs-material>=9.5.0" ]

[tool.setuptools.dynamic]
version = {attr = "krishi_sahayak.__version__"}

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E","W","F","I","C4","UP","N","B","A","C90","T20","FBT","RUF"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.isort]
known-first-party = ["krishi_sahayak"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --cov=krishi_sahayak --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["krishi_sahayak"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "torch", "torchvision", "pytorch_lightning", "matplotlib.*", "seaborn.*",
    "gradio.*", "wandb.*", "albumentations.*", "tqdm.*", "pandas.*", "timm.*",
    "numpy.*", "httpx.*",
]
ignore_missing_imports = true